# wantedash

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agent/: general_agent copy 2.py  general_agent copy.py  general_agent.py
agent/tools/: spreadsheet_tools.py
lib/: form_example.json  form_util.py  google_util.py  postgreasql_momory.py  prompt_backup.txt  prompt_generator.py  system_prompt.py
lib/tools/google/: toolkit.py  tools.py
routers/: ai_agent.py
static/: index.html  index_.html  prompt_admin.html
static/scripts/: agent.js  basic.js  fetchfn.js  index.css  index.js  util.js
static/styles/: main.css
