[project]
name = "wantedash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.119.0",
    "google-api-python-client>=2.185.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "langchain==0.3.27",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "openai>=2.5.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
]
